# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.30.7
	Martin Väth <martin at mvath.de>:
	- Support @profile: Add it to database (new database version: 34)
	- new option --profile{,+,-}
	- new package property "profile"
	- include profile in "allsetnames"
	- encode @profile as colors in default format strings
	- separate PORTDIR_OVERLAY by newlines (for output in other programs)
	- internal tools: avoid GREP_OPTIONS for compatibility with grep-2.21

*eix-0.30.6
	Martin Väth <martin at mvath.de>:
	- Fix: pass EAPI in environment for cache method ebuild*.
	  Thanks to Michał Górny for the analysis, see
	  https://bugs.gentoo.org/show_bug.cgi?id=532952
	- internal: silence some stupid cpplint warnings

*eix-0.30.5
	Martin Väth <martin at mvath.de>:
	- Let PORTAGE_REPOSITORIES _override_ (not only add to) repos.conf
	  to match with portage's behaviour
	- zsh-completion: fix checks for _tags
	- internal: Replace type(...) casting by static_cast<type>(...)
	- German translation: Many fixes and extensions by
	  André Jaenisch <andre.jaenisch at openmailbox.org>
	- Bump gettext

*eix-0.30.4
	Martin Väth <martin at mvath.de>:
	- Fix for lines ending with EOF (regression introduced in eix-0.30.3),
	  see https://github.com/vaeth/eix/issues/3
	- Support PORTAGE_REPOSITORIES
	- internal: Support parsing from mem for varsreader.cc

*eix-0.30.3
	Martin Väth <martin at mvath.de>:
	- Replace default [D] by [?] to avoid confusion with portage output
	- Remove EXEC_EBUILD, EXEC_EBUILD_SH, PORTAGE_BIN_PATH
	- Remove --with-ebuild-sh-default, --with-portage-bin-path
	- Use instead portageq, PATH, and/or EPREFIX_PORTAGE_EXEC to obtain
	  paths, see https://bugs.gentoo.org/show_bug.cgi?id=520436
	- eix-sync: Add -vn (verbose dry-run) options, see
	  https://bugs.gentoo.org/show_bug.cgi?id=509750
	- Fix more wrong usages of getline(), see
	  https://bugs.gentoo.org/show_bug.cgi?id=506106
	- Fix include files for ioctl() on solaris, see